# gnudb

./: Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  ci.yml  publish.yml
src/: cddbp.rs  data.rs  error.rs  http.rs  lib.rs  parser.rs  test.rs
