[package]
name = "gnudb"
version = "0.2.2"
edition = "2024"
description = "Crate to get CDDB information from gnudb.org (like cddb.com and freedb.org in the past)"
readme = "README.md"
homepage = "https://github.com/joske/gnudb"
repository = "https://github.com/joske/gnudb"
license = "MIT"
keywords = ["CDDB", "freedb", "gnudb"]

[dependencies]
async-std = "1.13"
discid = "0.5"

[dev-dependencies]
tokio-test = "0.4"
