[package]
name = "gnudb"
version = "0.3.0"
edition = "2024"
description = "Crate to get CDDB information from gnudb.org (like cddb.com and freedb.org in the past)"
readme = "README.md"
homepage = "https://github.com/joske/gnudb"
repository = "https://github.com/joske/gnudb"
license = "MIT"
keywords = ["CDDB", "freedb", "gnudb"]

[dependencies]
smol = "2.0"
discid = "0.5"
thiserror = "2.0"
log = "0.4"
ureq = "2.10"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
serial_test = "3.0"
