[package]
name = "gnudb"
version = "0.4.1"
edition = "2024"
description = "Crate to get CDDB information from gnudb.org (like cddb.com and freedb.org in the past)"
readme = "README.md"
homepage = "https://github.com/joske/gnudb"
repository = "https://github.com/joske/gnudb"
license = "MIT"
keywords = ["CDDB", "freedb", "gnudb"]

[dependencies]
smol = "2.0"
discid = "0.7"
thiserror = "2.0"
log = "0.4"
ureq = "3.1"

[dev-dependencies]
env_logger = "0.11"
serial_test = "3.0"
